# Android-ChromaKey-Filtros-OpenCV

parte1-a/: build.gradle.kts  settings.gradle.kts
parte1-a/app/: build.gradle.kts
parte1-a/app/src/androidTest/java/ups/vision/aplicacionnativa/: ExampleInstrumentedTest.java
parte1-a/app/src/main/: AndroidManifest.xml
parte1-a/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
parte1-a/app/src/main/java/ups/vision/aplicacionnativa/: MainActivity.java
parte1-a/app/src/main/res/layout/: activity_main.xml
parte1-a/app/src/test/java/ups/vision/aplicacionnativa/: ExampleUnitTest.java
parte1-a/gradle/: libs.versions.toml
parte1-a/gradle/wrapper/: gradle-wrapper.properties
parte1-a/opencv/: build.gradle.kts
parte1-b/: settings.gradle.kts
parte1-b/app/: build.gradle.kts
parte1-b/app/src/androidTest/java/ups/vision/aplicacionsec/: ExampleInstrumentedTest.java
parte1-b/app/src/main/: AndroidManifest.xml
parte1-b/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
parte1-b/app/src/main/java/ups/vision/aplicacionsec/: MainActivity.java
parte1-b/app/src/main/res/layout/: activity_main.xml
parte1-b/app/src/main/res/values/: strings.xml  themes.xml
parte1-b/app/src/main/res/values-night/: themes.xml
parte1-b/app/src/test/java/ups/vision/aplicacionsec/: ExampleUnitTest.java
parte1-b/gradle/: libs.versions.toml
parte1-b/gradle/wrapper/: gradle-wrapper.properties
parte1-b/opencv/: build.gradle.kts
